@@ -188,6 +188,10 @@ Bug fixes
  * LUCENE-2943: Fix thread-safety issues with ICUCollationKeyFilter.
    (Robert Muir)
 
+ * LUCENE-3087: Highlighter: fix case that was preventing highlighting
+   of exact phrase when tokens overlap. (Pierre Gossé via Mike
+   McCandless)
+
 API Changes
 
  * LUCENE-2867: Some contrib queryparser methods that receives CharSequence as
